test/classes/generic/queryGenericField4.good
queryGenericField4.chpl:7: In function 'test':
queryGenericField4.chpl:7: error: the query identifier 'R' shadows the enclosing type 'R'
